<resources>
    <string name="app_name">Chassir App</string>
    <string name="icon">Icon</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forget_pass">Forget Password ?</string>
    <string name="motif">Motif</string>
    <string name="login">Login</string>
    <string name="google">Google</string>
    <string name="belum_punya_akun">Belum Punya Akun ?</string>
    <string name="register">Register</string>
    <string name="logo_google">Logo Google</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="name">Name</string>
    <string name="no_telp">No Telp</string>
    <string name="lupa_password">Lupa Password</string>
    <string name="home">Home</string>
    <string name="barcode">Barcode</string>
    <string name="history">History</string>
    <string name="welcome">Welcome,</string>
    <string name="shop">Shop</string>
    <string name="barang">Barang</string>
    <string name="bank">Bank</string>
    <string name="member">Member</string>
    <string name="pembukuan">Pembukuan</string>
    <string name="barcode_barang">Barcode Barang</string>
    <string name="pembelian">Pembelian</string>
    <string name="item">Item</string>
    <string name="rp_0">0</string>
    <string name="total">Total</string>
    <string name="tambah">Tambah</string>
    <string name="pembelian2">Pembelian :</string>
    <string name="_0">0</string>
    <string name="total2">Total :</string>
    <string name="search">Search</string>
    <string name="stok">Stok :</string>
    <string name="nama_barang">Nama Barang</string>
    <string name="harga_barang">Harga Barang</string>
    <string name="stok_barang">Stok Barang</string>
    <string name="jenis_barang">Jenis Barang :</string>
    <string name="simpang_barang">Simpang Barang</string>
    <string name="detail_produk">Detail Produk</string>
    <string name="tipe">Tipe :</string>
    <string name="type">type</string>
    <string name="jenis">Jenis :</string>
    <string name="jenis2">Jenis</string>
    <string name="buah">Buah</string>
    <string name="keranjang">Keranjang</string>
    <string name="metode_pembayaran">Metode Pembayaran</string>
    <string name="pilih">Pilih</string>
    <string name="nama_bank">Nama Bank</string>
    <string name="no_rek">No Rek</string>
    <string name="qris">QRIS</string>
    <string name="jika_sudah_memiliki">*Jika sudah memiliki</string>
    <string name="simpan_bank">Simpan Bank</string>
    <string name="poin">Poin</string>
    <string name="simpan_member">Simpan Member</string>
    <string name="bulan">Bulan :</string>
    <string name="tahun">Tahun :</string>
    <string name="tampilkan">Tampilkan</string>
    <string name="terjual">Terjual :</string>
    <string name="bayar">Bayar</string>
    <string name="edit_account">Edit Account</string>
    <string name="edit_password">Edit Password</string>
    <string name="simpan">Simpan</string>
    <string name="password_lama">Password Lama</string>
    <string name="password_baru">Password Baru</string>
</resources>