<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.bank.BankInputActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tbBankInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/metode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/metode_pembayaran"
            android:textColor="@android:color/black"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:textSize="14sp"
            />

        <TextView
            android:id="@+id/txtPilih"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pilih"
            android:layout_toEndOf="@id/metode"
            android:textColor="@color/colorButton"
            android:textStyle="bold"
            android:layout_marginStart="200dp"/>
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nama_bank"
        style="@style/bank_input_name_bank"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp">

        <ImageView
            android:id="@+id/imgBankInput"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/baseline_bank"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"/>

        <TextView
            android:id="@+id/txtBankInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/imgBankInput"
            android:text="@string/name"
            style="@style/bank_input_name_bank_2"/>

    </RelativeLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:padding="4dp">

        <EditText
            android:id="@+id/edNoRek"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/no_rek"
            android:inputType="number"
            android:textColor="@android:color/black"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:padding="4dp">

        <EditText
            android:id="@+id/edNamaRek"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:inputType="number"
            android:textColor="@android:color/black"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/qris"
        style="@style/bank_input_name_bank_qris"/>
    
    <ImageView
        android:id="@+id/imgInputQris"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@color/colorButton"
        android:src="@drawable/ph_camera_fill"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jika_sudah_memiliki"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        />

    <Button
        android:id="@+id/btnSimpanBank"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="90dp"
        android:text="@string/simpan_bank"/>

</LinearLayout>