<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity">

    <ImageView
        android:id="@+id/imgMotif"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:src="@drawable/motif"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/motif" />

    <LinearLayout
        android:id="@+id/layoutEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:layout_below="@id/imgMotif"
        android:layout_alignParentStart="true"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="@android:color/black"
                android:autofillHints="Email" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp">

            <EditText
                android:id="@+id/edPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="Email"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@android:color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp">
            <TextView
                android:id="@+id/txtForgetPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="@android:color/black"
                android:text="@string/forget_pass"
                android:layout_alignParentEnd="true"/>
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/rlButton"
            android:layout_width="177dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="17dp">

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:backgroundTint="@color/colorButton"/>

            <RelativeLayout
                android:id="@+id/btnGoogle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/button_google">

                <ImageView
                    android:id="@+id/iconGoogle"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/icons_google"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="18dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:contentDescription="@string/logo_google" />

                <TextView
                    android:id="@+id/txtGoogle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/iconGoogle"
                    android:layout_alignBottom="@id/iconGoogle"
                    android:layout_alignTop="@id/iconGoogle"
                    android:text="@string/google"
                    android:layout_marginStart="21dp"
                    />

            </RelativeLayout>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="40dp"
            android:layout_marginTop="8dp">

            <TextView
                android:id="@+id/blmAkun"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/belum_punya_akun"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"/>

            <TextView
                android:id="@+id/txtRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/blmAkun"
                android:layout_alignParentTop="true"
                android:layout_marginStart="10dp"
                android:text="@string/register"
                android:textStyle="bold"
                android:textColor="@color/colorButton"
                />

        </RelativeLayout>

    </LinearLayout>


    


</RelativeLayout>